--- a/src/docs/examples/Navigation/NavigationBlock.mdx
+++ b/src/docs/examples/Navigation/NavigationBlock.mdx
@@ -1,4 +1,4 @@
-import NavigationBlockTxt from "./NavigationBlock.tsx?raw";
+import NavigationBlockTxt from "./NavigationExample.tsx?raw";
 
 import { Canvas, Controls, Source, Meta } from '@storybook/blocks';
 import * as Stories from './NavigationBlock.stories.tsx';
@@ -11,9 +11,9 @@ Bloc de navigation présent en haut de toutes les pages.
 
 ## Rendu
 
-<Canvas of={Stories.Default} sourceState="shown" />
+<Canvas of={Stories.Navigation} sourceState="shown" />
 
-<Controls of={Stories.Default} />
+<Controls of={Stories.Navigation} />
 
 ## Référence d'implémentation
 
