Page Nouveau Snapshot

--- a/src/docs/pages/Preparateur/SnapshotPage.mdx
+++ b/src/docs/pages/Preparateur/SnapshotPage.mdx
@@ -3,7 +3,7 @@ import SnapshotListPageTxt from "./SnapshotPage.tsx?raw";
 import { Canvas, Controls, Source, Meta } from '@storybook/blocks';
 import * as Stories from './SnapshotPage.stories.tsx';
 
-<Meta title="MarioNUM/Examples/Préparateur/Page Snapshot" />
+<Meta title="MarioNUM/Examples/Préparateur/Snapshot - Page" />
 
 # Page de Snapshots
 
