Pages TP Organisateur

--- a/src/docs/pages/Organisateur/TPListPage.mdx
+++ b/src/docs/pages/Organisateur/TPListPage.mdx
@@ -5,7 +5,7 @@ import * as Stories from './TPListPage.stories.tsx';
 
 <Meta title="MarioNUM/Examples/Organisateur/Travaux pratiques (TP) - Liste"/>
 
-# New de Snapshots
+# Travaux pratiques (TP) - Liste
 
 Référence d'implémentation pour "Travaux pratiques (TP) - Liste"
 
