--- a/src/docs/pages/Preparateur/SnapshotNewPage.mdx
+++ b/src/docs/pages/Preparateur/SnapshotNewPage.mdx
@@ -5,9 +5,9 @@ import * as Stories from './SnapshotNewPage.stories.tsx';
 
 <Meta title="MarioNUM/Examples/Préparateur/Snapshot - Nouveau" />
 
-# New de Snapshots
+# Nouveau Snapshot
 
-Référence d'implémentation pour la page "Snapshot"
+Référence d'implémentation pour la page "Snapshot - Nouveau"
 
 ## Rendu
 
