TP Animate Page

--- a/src/docs/examples/CopyLinksModal/CopyLinksModalExample.mdx
+++ b/src/docs/examples/CopyLinksModal/CopyLinksModalExample.mdx
@@ -3,7 +3,7 @@ import CopyLinksModalExampleTxt from "./CopyLinksModalExample.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './CopyLinksModalExample.stories.tsx';
 
-<Meta title="MarioNUM/Examples/Copy Links Modal"/>
+<Meta title="MarioNUM/Examples/CopyLinksModalExample"/>
 
 # Copy Links Modal
 
