--- a/src/docs/examples/ValidateSessionModal/ValidateSessionModalExample.mdx
+++ b/src/docs/examples/ValidateSessionModal/ValidateSessionModalExample.mdx
@@ -3,7 +3,7 @@ import ValidateSessionModalExampleTxt from "./ValidateSessionModalExample.tsx?ra
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './ValidateSessionModalExample.stories.tsx';
 
-<Meta title="MarioNUM/Examples/Validate Session Modal"/>
+<Meta title="MarioNUM/Examples/ValidateSessionModalExample"/>
 
 # Copy Links Modal
 
