Animateur - Page Séance (Session)

--- a/src/components/Comment/Comment.mdx
+++ b/src/components/Comment/Comment.mdx
@@ -8,7 +8,7 @@ import CommentTxt from "./Comment.tsx?raw";
 
 ## Utilisation
 
-<Canvas of={Stories.Default} sourceState="shown"/>
+<Canvas of={Stories.CommentStory} sourceState="shown"/>
 
 ## Implémentation
 
