--- a/src/components/Packet/Packet.mdx
+++ b/src/components/Packet/Packet.mdx
@@ -8,7 +8,7 @@ import PacketTxt from "./Packet.tsx?raw";
 
 ## Utilisation
 
-<Canvas of={Stories.Default} sourceState="shown"/>
+<Canvas of={Stories.PacketStory} sourceState="shown"/>
 
 ## Implémentation
 
