--- a/src/components/Snapshot/Snapshot.mdx
+++ b/src/components/Snapshot/Snapshot.mdx
@@ -8,7 +8,7 @@ import SnapshotTxt from "./Snapshot.tsx?raw";
 
 ## Utilisation
 
-<Canvas of={Stories.Default} sourceState="shown"/>
+<Canvas of={Stories.SnapshotStory} sourceState="shown"/>
 
 ## Implémentation
 
