--- a/src/components/Title/TitleBlock.mdx
+++ b/src/components/Title/TitleBlock.mdx
@@ -11,7 +11,7 @@ Bloc de navigation présent en haut de toutes les pages.
 
 ### Sort and Search
 
-<Canvas of={Stories.Default} sourceState="shown"/>
+<Canvas of={Stories.TitleDefaultStory} sourceState="shown"/>
 
 ### With Progress
 
