Pages étudiant (charte, mon compte, session, TPs)

--- a/src/docs/pages/Organisateur/TPListPage.mdx
+++ b/src/docs/pages/Organisateur/TPListPage.mdx
@@ -3,11 +3,11 @@ import TPListPageTxt from "./TPListPage.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './TPListPage.stories.tsx';
 
-<Meta title="MarioNUM/Examples/Organisateur/Travaux pratiques (TP) - Liste"/>
+<Meta title="MarioNUM/Examples/Organisateur/TP - Liste"/>
 
-# Travaux pratiques (TP) - Liste
+# TP - Liste
 
-Référence d'implémentation pour "Travaux pratiques (TP) - Liste"
+Référence d'implémentation pour "TP - Liste"
 
 
 <Canvas of={Stories.TPListPageStory} sourceState="none"/>
