--- a/src/docs/pages/Organisateur/TPOrganizeStep1.mdx
+++ b/src/docs/pages/Organisateur/TPOrganizeStep1.mdx
@@ -3,11 +3,11 @@ import TPOrganizeStep1Txt from "./TPOrganizeStep1.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './TPOrganizeStep1.stories.tsx';
 
-<Meta title="MarioNUM/Examples/Organisateur/Travaux pratiques (TP) - Organiser 1"/>
+<Meta title="MarioNUM/Examples/Organisateur/TP - Organiser 1"/>
 
-# Travaux pratiques (TP) - Organiser 1
+# TP - Organiser 1
 
-Référence d'implémentation pour "Travaux pratiques (TP) - Organiser 1"
+Référence d'implémentation pour "TP - Organiser 1"
 
 
 <Canvas of={Stories.TPOrganizeStep1Story} sourceState="none"/>
