--- a/src/docs/pages/Organisateur/TPOrganizeStepResume.mdx
+++ b/src/docs/pages/Organisateur/TPOrganizeStepResume.mdx
@@ -3,7 +3,7 @@ import TPOrganizeStepResumeTxt from "./TPOrganizeStepResume.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './TPOrganizeStepResume.stories.tsx';
 
-<Meta title="MarioNUM/Examples/Organisateur/Travaux pratiques (TP) - Résumé"/>
+<Meta title="MarioNUM/Examples/Organisateur/TP - Résumé"/>
 
 # TPOrganizeStepResume
 
