--- a/src/docs/pages/Animateur/SessionPage.mdx
+++ b/src/docs/pages/Animateur/SessionPage.mdx
@@ -3,7 +3,7 @@ import SessionPageTxt from "./SessionPage.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './SessionPage.stories.tsx';
 
-<Meta title="MarioNUM/Examples/SessionPage"/>
+<Meta title="MarioNUM/Examples/Animateur/TP - Session"/>
 
 # SessionPage
 
