--- a/src/docs/pages/Animateur/TPAnimatePage.mdx
+++ b/src/docs/pages/Animateur/TPAnimatePage.mdx
@@ -3,11 +3,11 @@ import TPAnimatePageTxt from "./TPAnimatePage.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './TPAnimatePage.stories.tsx';
 
-<Meta title="MarioNUM/Examples/Animateur/Travaux pratiques (TP) - Animer"/>
+<Meta title="MarioNUM/Examples/Animateur/TP - Animer"/>
 
-# Travaux pratiques (TP) - Liste
+# TP - Liste
 
-Référence d'implémentation pour "Travaux pratiques (TP) - Liste"
+Référence d'implémentation pour "TP - Liste"
 
 
 <Canvas of={Stories.TPAnimatePageStory} sourceState="none"/>
