--- a/src/docs/pages/Organisateur/TPOrganizeStep2.mdx
+++ b/src/docs/pages/Organisateur/TPOrganizeStep2.mdx
@@ -3,11 +3,11 @@ import TPOrganizeStep2Txt from "./TPOrganizeStep2.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './TPOrganizeStep2.stories.tsx';
 
-<Meta title="MarioNUM/Examples/Organisateur/Travaux pratiques (TP) - Organiser 2"/>
+<Meta title="MarioNUM/Examples/Organisateur/TP - Organiser 2"/>
 
-# Travaux pratiques (TP) - Organiser 2
+# TP - Organiser 2
 
-Référence d'implémentation pour "Travaux pratiques (TP) - Organiser 2"
+Référence d'implémentation pour "TP - Organiser 2"
 
 
 <Canvas of={Stories.TPOrganizeStep2Story} sourceState="none"/>
