--- a/src/docs/pages/Organisateur/TPOrganizeStep3.mdx
+++ b/src/docs/pages/Organisateur/TPOrganizeStep3.mdx
@@ -3,11 +3,11 @@ import TPOrganizeStep3Txt from "./TPOrganizeStep3.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './TPOrganizeStep3.stories.tsx';
 
-<Meta title="MarioNUM/Examples/Organisateur/Travaux pratiques (TP) - Organiser 3"/>
+<Meta title="MarioNUM/Examples/Organisateur/TP - Organiser 3"/>
 
-# Travaux pratiques (TP) - Organiser 3
+# TP - Organiser 3
 
-Référence d'implémentation pour "Travaux pratiques (TP) - Organiser 3"
+Référence d'implémentation pour "TP - Organiser 3"
 
 
 <Canvas of={Stories.TPOrganizeStep3Story} sourceState="none"/>
