--- a/src/docs/pages/Organisateur/TPOrganizeStep4.mdx
+++ b/src/docs/pages/Organisateur/TPOrganizeStep4.mdx
@@ -3,11 +3,11 @@ import TPOrganizeStep4Txt from "./TPOrganizeStep4.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './TPOrganizeStep4.stories.tsx';
 
-<Meta title="MarioNUM/Examples/Organisateur/Travaux pratiques (TP) - Organiser 4"/>
+<Meta title="MarioNUM/Examples/Organisateur/TP - Organiser 4"/>
 
-# Travaux pratiques (TP) - Organiser 4
+# TP - Organiser 4
 
-Référence d'implémentation pour "Travaux pratiques (TP) - Organiser 4"
+Référence d'implémentation pour "TP - Organiser 4"
 
 
 <Canvas of={Stories.TPOrganizeStep4Story} sourceState="none"/>
