Add Admin pages (snapshot liste, snapshot page, permissions)

--- a/src/docs/examples/ChangePasswordModal/ChangePasswordModalExample.mdx
+++ b/src/docs/examples/ChangePasswordModal/ChangePasswordModalExample.mdx
@@ -3,7 +3,7 @@ import ChangePasswordModalExampleTxt from "./ChangePasswordModalExample.tsx?raw"
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './ChangePasswordModalExample.stories.tsx';
 
-<Meta title="MarioNUM/Examples/Changer de mot de passe"/>
+<Meta title="MarioNUM/Examples/Modale - Changer de mot de passe"/>
 
 # Changer de mot de passe
 
