--- a/src/docs/examples/CopyLinksModal/CopyLinksModalExample.mdx
+++ b/src/docs/examples/CopyLinksModal/CopyLinksModalExample.mdx
@@ -3,11 +3,11 @@ import CopyLinksModalExampleTxt from "./CopyLinksModalExample.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './CopyLinksModalExample.stories.tsx';
 
-<Meta title="MarioNUM/Examples/CopyLinksModalExample"/>
+<Meta title="MarioNUM/Examples/Modale - Copier les liens"/>
 
 # Copy Links Modal
 
-Référence d'implémentation pour "CopyLinksModal"
+Référence d'implémentation pour "Copier les liens"
 
 
 <Canvas of={Stories.CopyLinksModalExampleStory} sourceState="none"/>
