--- a/src/docs/examples/RecurrenceModal/RecurrenceModalExample.mdx
+++ b/src/docs/examples/RecurrenceModal/RecurrenceModalExample.mdx
@@ -3,11 +3,11 @@ import RecurrenceModalExampleTxt from "./RecurrenceModalExample.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './RecurrenceModalExample.stories.tsx';
 
-<Meta title="MarioNUM/Examples/RecurrenceModal"/>
+<Meta title="MarioNUM/Examples/Modale - Récurrence du TP"/>
 
 # RecurrenceModal
 
-Référence d'implémentation pour "RecurrenceModal"
+Référence d'implémentation pour "Modale - Récurrence du TP"
 
 
 <Canvas of={Stories.RecurrenceModalExampleStory} sourceState="shown"/>
