--- a/src/docs/examples/TPListExample/TPListExample.mdx
+++ b/src/docs/examples/TPListExample/TPListExample.mdx
@@ -3,7 +3,7 @@ import TPListExampleTxt from "./TPListExample.tsx?raw";
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './TPListExample.stories.tsx';
 
-<Meta title="MarioNUM/Examples/TPListExample"/>
+<Meta title="MarioNUM/Examples/Tableau de TPs"/>
 
 # TPListExample
 
