--- a/src/docs/examples/ValidateSessionModal/ValidateSessionModalExample.mdx
+++ b/src/docs/examples/ValidateSessionModal/ValidateSessionModalExample.mdx
@@ -3,11 +3,11 @@ import ValidateSessionModalExampleTxt from "./ValidateSessionModalExample.tsx?ra
 import {Canvas, Source, Meta} from '@storybook/blocks';
 import * as Stories from './ValidateSessionModalExample.stories.tsx';
 
-<Meta title="MarioNUM/Examples/ValidateSessionModalExample"/>
+<Meta title="MarioNUM/Examples/Modale - Valider la session"/>
 
-# Copy Links Modal
+# Modale - Valider la session
 
-Référence d'implémentation pour "ValidateSessionModal"
+Référence d'implémentation pour "Modale - Valider la session"
 
 
 <Canvas of={Stories.ValidateSessionModalExampleStory} sourceState="none"/>
