--- a/src/components/LinkCard/LinkCard.mdx
+++ b/src/components/LinkCard/LinkCard.mdx
@@ -10,9 +10,10 @@ import * as Stories from './LinkCard.stories.tsx';
 Référence d'implémentation pour "LinkCard"
 
 
-<Canvas of={Stories.LinkCardStory} sourceState="none"/>
+<Canvas of={Stories.LinkCardStory} sourceState="shown"/>
 
+## Implémentation
 
-Copier/Coller le code suivant dans votre projet pour servir de base d'implémentation :
+Contrairement aux exemples, ce composant est utilisable en l'état ! Si toutefois vous deviez le réimplémenter, voici le code de référence.
 
 <Source code={LinkCardTxt} dark/>
