--- a/src/components/Station/Station.mdx
+++ b/src/components/Station/Station.mdx
@@ -10,7 +10,7 @@ import * as Stories from './Station.stories.tsx';
 Référence d'implémentation pour "Station"
 
 
-<Canvas of={Stories.StationStory} sourceState="none"/>
+<Canvas of={Stories.StationStory} sourceState="shown"/>
 
 
 Copier/Coller le code suivant dans votre projet pour servir de base d'implémentation :
