--- a/src/docs/examples/AddUserModal/AddUserModalExample.mdx
+++ b/src/docs/examples/AddUserModal/AddUserModalExample.mdx
@@ -12,6 +12,7 @@ Référence d'implémentation pour "Modale Ajouter un utilisateur"
 
 <Canvas of={Stories.AddUserModalExampleStory} sourceState="shown"/>
 
+## Référence d'implémentation
 
 Copier/Coller le code suivant dans votre projet pour servir de base d'implémentation :
 
