--- a/src/docs/examples/ChangePasswordModal/ChangePasswordModalExample.mdx
+++ b/src/docs/examples/ChangePasswordModal/ChangePasswordModalExample.mdx
@@ -12,6 +12,7 @@ Référence d'implémentation pour "Changer de mot de passe"
 
 <Canvas of={Stories.ChangePasswordModalExampleStory} sourceState="shown"/>
 
+## Référence d'implémentation
 
 Copier/Coller le code suivant dans votre projet pour servir de base d'implémentation :
 
