--- a/src/docs/examples/CopyLinksModal/CopyLinksModalExample.mdx
+++ b/src/docs/examples/CopyLinksModal/CopyLinksModalExample.mdx
@@ -5,13 +5,14 @@ import * as Stories from './CopyLinksModalExample.stories.tsx';
 
 <Meta title="MarioNUM/Examples/Modale - Copier les liens"/>
 
-# Copy Links Modal
+# Modale - Copier les liens
 
 Référence d'implémentation pour "Copier les liens"
 
 
 <Canvas of={Stories.CopyLinksModalExampleStory} sourceState="none"/>
 
+## Référence d'implémentation
 
 Copier/Coller le code suivant dans votre projet pour servir de base d'implémentation :
 
