--- a/src/docs/examples/ImportListModal/ImportListModalExample.mdx
+++ b/src/docs/examples/ImportListModal/ImportListModalExample.mdx
@@ -12,6 +12,7 @@ Référence d'implémentation pour "Modale - Importer une liste"
 
 <Canvas of={Stories.ImportListModalExampleStory} sourceState="none"/>
 
+## Référence d'implémentation
 
 Copier/Coller le code suivant dans votre projet pour servir de base d'implémentation :
 
