--- a/src/docs/examples/RecurrenceModal/RecurrenceModalExample.mdx
+++ b/src/docs/examples/RecurrenceModal/RecurrenceModalExample.mdx
@@ -5,13 +5,14 @@ import * as Stories from './RecurrenceModalExample.stories.tsx';
 
 <Meta title="MarioNUM/Examples/Modale - Récurrence du TP"/>
 
-# RecurrenceModal
+# Modale - Récurrence du TP
 
 Référence d'implémentation pour "Modale - Récurrence du TP"
 
 
 <Canvas of={Stories.RecurrenceModalExampleStory} sourceState="shown"/>
 
+## Référence d'implémentation
 
 Copier/Coller le code suivant dans votre projet pour servir de base d'implémentation :
 
