--- a/src/docs/examples/TPList/TPListExample.mdx
+++ b/src/docs/examples/TPList/TPListExample.mdx
@@ -12,6 +12,7 @@ Référence d'implémentation pour "Tableau de TPs"
 
 <Canvas of={Stories.TPListExampleStory} sourceState="none"/>
 
+## Référence d'implémentation
 
 Copier/Coller le code suivant dans votre projet pour servir de base d'implémentation :
 
