--- a/src/docs/examples/ValidateSessionModal/ValidateSessionModalExample.mdx
+++ b/src/docs/examples/ValidateSessionModal/ValidateSessionModalExample.mdx
@@ -12,6 +12,7 @@ Référence d'implémentation pour "Modale - Valider la session"
 
 <Canvas of={Stories.ValidateSessionModalExampleStory} sourceState="none"/>
 
+## Référence d'implémentation
 
 Copier/Coller le code suivant dans votre projet pour servir de base d'implémentation :
 
