--- a/src/docs/MarioNUMUIKit.mdx
+++ b/src/docs/MarioNUMUIKit.mdx
@@ -1,5 +1,6 @@
 import {Meta, Source} from "@storybook/blocks";
 import exampleCodeTxt from "./uikitExampleCode.tsx?raw";
+import archive from "../assets/marionum-ui-kit-1.0.0.tgz?url";
 
 <Meta title="Le UI-Kit"/>
 
@@ -39,6 +40,8 @@ Ce UI-Kit contient 3 éléments :
 > packets comme npm ou sur un dépôt git.
 
 **Étape 1. Copier l'archive tgz dans le même dossier parent que le projet applicatif**
+
+Télécharger la version 1.0.0: <a href={archive}>{archive}</a>
 
 Pas besoin de la décompresser, juste avoir le fichier proche du projet. Il peut éventuellement être intégré et versionné dans le dossier du projet applicatif.
 
